<resources>
    <!-- Por default, utiliza este ficheiro, que contém todas as frases em Português. -->
    <string name="app_name">Cinecartaz</string>

    <!-- Opções @ Drawer & outros -->
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
    <string name="feature_dashboard" translatable="false">Dashboard</string>
    <string name="feature_register_movie">Registar filme</string>
    <string name="feature_list_movies">Os meus filmes</string>
    <string name="feature_choose_movie">Selecionar filme</string>
    <string name="feature_lis_movies_map">Os meus filmes (mapa)</string>

    <!-- labels @ watched movies -->
    <string name="lbl_image_content_description">Poster do filme</string>

    <!-- Labels @ Registar Filme -->
    <string name="lbl_movie">Nome do filme</string>
    <string name="lbl_click_to_search_movie">(Clique para pesquisar…)</string>
    <string name="lbl_movie_name_hint">(Introduza o filme a pesquisar…)</string>
    <string name="lbl_cinema">Cinema</string>
    <string name="lbl_cinema_name_hint">(Introduza o nome do cinema…)</string>
    <string name="lbl_movie_rating">Avaliação (1 a 10)</string>
    <string name="lbl_rating_hint">Indique a sua avaliação do filme</string>
    <string name="lbl_minus" translatable="false">-</string>
    <string name="lbl_plus" translatable="false">+</string>
    <string name="lbl_watch_date">Data de visualização</string>
    <string name="lbl_movie_photos">Fotografias (opcional)</string>
    <string name="lbl_add_photo">Adicionar imagem…</string>
    <string name="lbl_obs">Observações (máx. 200 caracteres)</string>
    <string name="lbl_obs_hint">(Opcional: Introduza observações…)</string>
    <string name="lbl_btn_insert">Gravar Filme</string>
    <string name="lbl_saving_movie">A gravar filme…</string>
    <string name="lbl_movie_saved_successfully">Filme gravado com sucesso!</string>

    <!-- Labels @ Select a Movie -->
    <string name="lbl_info_year">Ano: </string>
    <string name="lbl_info_genre">Género: </string>
    <string name="lbl_info_director">Diretor: </string>
    <string name="lbl_info_rating_imdb" translatable="false">IMDB &#x2B50;: </string>

    <!-- movie details -->
    <string name="lbl_seen_at">Visto no:</string>
    <string name="lbl_experience_rating">Experiência:</string>
    <string name="lbl_imdb_rating">IMDB:</string>
    <string name="lbl_seen_date">em:</string>
    <string name="lbl_launch_date">Lançado em:</string>
    <string name="lbl_obs2">Observações:</string>

    <!-- Dashboard -->
    <string name="lbl_dashboard_stat1">Pior filme classificado</string>
    <string name="lbl_dashboard_stat2">Melhor filme classificado</string>

    <!-- Mix of other helper labels, hint texts, etc. -->
    <string name="rationale_rejected_once_permission_storage">AVISO: Rejeitou a permissão de acesso aos ficheiros! É necessário aceitá-la para poder anexar imagens.</string>
    <string name="rationale_rejected_permanently_permission_storage">AVISO: Rejeitou permanentemente a permissão de acesso aos ficheiros! É necessário aceitá-la nas definições da aplicação.</string>
    <string name="lbl_results_count">%1$s resultados</string>
    <string name="lbl_no_results_found">Não foram encontrados resultados.</string>
    <string name="lbl_no_results_found_with_value">Sem resultados para \'%1$s\'.</string>
    <string name="lbl_cancel">Cancelar</string>
    <string name="lbl_speak">Falar…</string>
    <string name="lbl_repeat">Repetir…</string>
    <string name="lbl_search">Pesquisar</string>
    <string name="lbl_lorem_ipsum">Lorem ipsum</string>
    <string name="lbl_go_back" translatable="false">&lt;—</string>
    <string name="lbl_more" translatable="false">—&gt;</string>
    <string name="lbl_page_count">Página: %1$s/%2$s</string>
    <string name="lbl_title_voice_search">Pesquisa de filme por voz</string>
    <string name="lbl_searching_for_results">A pesquisar…</string>
    <string name="lbl_showing_results_for_query">A mostrar %1$s resultados para \'%2$s\'.</string>
    <string name="lbl_register_now_shake">Regista Já!</string>
    <string name="lbl_ratings_word">votos</string>
    <string name="lbl_link_visit" translatable="false">Link IMDB</string>

    <!-- Listagem de filmes: filtragens -->
    <string name="lbl_filter_results">Filtrar resultados</string>
    <string name="lbl_distance_select">Distância (m)</string>
    <string name="lbl_distance_select_none">N/A</string>
    <string name="lbl_distance_select_500m">500</string>
    <string name="lbl_distance_select_1000m">1000</string>
    <string name="lbl_apply_filter">Aplicar filtro</string>
    <string name="lbl_order_resa">Ordenação</string>
    <string name="lbl_order_results_asc">Asc.</string>
    <string name="lbl_order_results_desc">Desc.</string>

    <!-- Errors & Warnings -->
    <string name="error_missing_movie">ERRO: Deve selecionar um Filme!</string>
    <string name="error_missing_cinema">ERRO: Deve selecionar um Cinema!</string>
    <string name="error_missing_text">ERRO: Deve introduzir texto a pesquisar!</string>
    <string name="error_too_many_results">ERRO: Foram encontrados vários resultados. Por favor, introduza termos mais específicos.</string>
    <string name="error_internal_error">Erro interno, por favor tente novamente</string>
    <string name="error_no_internet_connection">Sem ligação à Internet</string>
    <string name="warn_no_more_results">Sem mais resultados a apresentar.</string>
    <string name="exception_add_image">Ocorreu um erro no processamento das imagens. Nem todas as imagens poderão ter sido corretamente adicionadas.</string>
    <string name="error_missing_required_data">Por favor preencha os campos obrigatórios em falta:</string>
    <string name="error_no_data_found">Não foram encontrados dados!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment. This is just a test text to test a test</string>

    <!-- rating decode values -->
    <string name="rating_too_weak">Muito Fraco</string>
    <string name="rating_weak">Fraco</string>
    <string name="rating_avg">Mediano</string>
    <string name="rating_good">Bom</string>
    <string name="rating_xl">Excelente</string>
    <string name="lbl_seen_date1">Visto a:</string>
    <string name="lbl_map_description">Localização dos cinemas visitados, num mapa</string>

</resources>