<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WatchedMovieDetailsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_seen_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="data de visualização"
        android:textSize="26sp"
        android:gravity="right"
        />

    <TextView
        android:id="@+id/tv_filler1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_below="@id/tv_seen_date"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:minLines="2"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="36sp"
        android:layout_below="@id/tv_filler1"
        />

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="200dp"
        android:layout_height="350dp"
        android:layout_below="@id/tv_title"
        />

    <TextView
        android:id="@+id/lbl_launch_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:text="@string/lbl_launch_date"
        android:textSize="26sp"
        android:layout_toRightOf="@id/iv_poster"
        />
    <TextView
        android:id="@+id/tv_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:textSize="26sp"
        android:layout_toRightOf="@id/lbl_launch_date"
        />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_below="@id/tv_year"
        android:layout_toRightOf="@id/iv_poster"
        />

    <TextView
        android:id="@+id/tv_storyline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:layout_below="@id/tv_genre"
        android:layout_toRightOf="@id/iv_poster"
        android:minLines="10"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_filler2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_below="@id/iv_poster"
        />

    <TextView
        android:id="@+id/tv_lbl_imdb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_imdb_rating"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_filler2"
        android:layout_toLeftOf="@id/tv_imdb_rating"
        />
    <TextView
        android:id="@+id/tv_imdb_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="9.2/10"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_filler2"
        android:layout_toRightOf="@id/iv_poster"
        />

    <TextView
        android:id="@+id/tv_filler3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_below="@id/tv_imdb_rating"
        />

    <View
        android:id="@+id/v_separator_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/tv_filler3"
        />

    <!-- ********** cinema related info ********** -->

    <TextView
        android:id="@+id/tv_lbl_seen_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_seen_at"
        android:textSize="24dp"
        android:layout_below="@id/tv_filler3"
        />


    <TextView
        android:id="@+id/tv_lbl_seen_date2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_seen_date"
        android:textSize="24sp"
        android:layout_below="@id/v_separator_1"
        android:layout_toRightOf="@id/iv_poster"
        android:layout_toLeftOf="@id/tv_seen_date2"
        />

    <TextView
        android:id="@+id/tv_seen_date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="21/02/20023"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_below="@id/tv_filler3"
        android:layout_alignParentRight="true"
        />


    <TextView
        android:id="@+id/tv_theatre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:minLines="1"
        android:maxLines="2"
        android:ellipsize="end"
        android:gravity="left"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_below="@id/tv_lbl_seen_in"
        />


    <TextView
        android:id="@+id/tv_lbl_experience_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_experience_rating"
        android:layout_below="@id/tv_theatre"
        android:layout_toLeftOf="@id/tv_experience_rating"
        android:textSize="26sp"
        />

    <TextView
        android:id="@+id/tv_experience_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="4/10"
        android:layout_below="@id/tv_theatre"
        android:layout_toRightOf="@id/iv_poster"
        android:textSize="26sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_photo_captures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lbl_experience_rating"
        />

    <TextView
        android:id="@+id/tv_filler4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_below="@id/rv_photo_captures"
        />
    <View
        android:id="@+id/v_separator_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/tv_filler4"
        />

    <TextView
        android:id="@+id/tv_filler5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_below="@id/v_separator_2"
        />
    <TextView
        android:id="@+id/lbl_obs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_obs"
        android:textSize="24sp"
        android:layout_below="@id/tv_filler5"
        />

    <TextView
        android:id="@+id/tv_obs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:minLines="3"
        android:layout_below="@id/lbl_obs"
        />





</RelativeLayout>